syntax = "proto3";

package account.v1;
option go_package = "github.com/CutyDog/mint-flea/proto/account/v1;accountv1";

import "google/protobuf/timestamp.proto";

service AccountService {
  rpc LoginAccount(LoginAccountRequest) returns (LoginAccountResponse);
}

service WalletService {
  rpc ListWallets(ListWalletsRequest) returns (ListWalletsResponse);
  rpc LinkWallet(LinkWalletRequest) returns (LinkWalletResponse);
  rpc UnlinkWallet(UnlinkWalletRequest) returns (UnlinkWalletResponse);
  rpc SetMainWallet(SetMainWalletRequest) returns (SetMainWalletResponse);
  rpc GetMainWallet(GetMainWalletRequest) returns (GetMainWalletResponse);
}

message Account {
  int64 id = 1;
  string uid = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message Wallet {
  int64 id = 1;
  int64 account_id = 2;
  string address = 3;
  int64 chain_id = 4;
  bool is_main = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// LoginAccount
message LoginAccountRequest {
  oneof key {
    string uid = 1;  // Firebase Auth UID
  }
}
message LoginAccountResponse { Account account = 1; }

// ListWallets
message ListWalletsRequest { int64 account_id = 1; }
message ListWalletsResponse { repeated Wallet wallets = 1; }

// LinkWallet
message LinkWalletRequest {
  int64 account_id = 1;
  string address = 2;
  int64 chain_id = 3;
  bool is_main = 4;
}
message LinkWalletResponse { Wallet wallet = 1; }

// UnlinkWallet
message UnlinkWalletRequest { int64 account_id = 1; int64 wallet_id = 2; }
message UnlinkWalletResponse { bool success = 1; }

// SetMainWallet
message SetMainWalletRequest { int64 account_id = 1; int64 wallet_id = 2; }
message SetMainWalletResponse { Wallet wallet = 1; }

// GetMainWallet
message GetMainWalletRequest { int64 account_id = 1; }
message GetMainWalletResponse { Wallet wallet = 1; }